Add connection proxy builder
connection proxy builder
rename common adapter to test
add concurrent count and lease time metrics