@@ -40,7 +40,7 @@
 
     <modules>
         <module>flexy-pool-core</module>
-        <module>flexy-common-adapter</module>
+        <module>flexy-common-adapter-test</module>
         <module>flexy-bonecp</module>
         <module>flexy-btm</module>
         <module>flexy-c3p0</module>
@@ -145,6 +145,26 @@
 
     <profiles>
         <profile>
+            <id>performance-testing</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <systemProperties>
+                                <property>
+                                    <name>performanceTesting</name>
+                                    <value>true</value>
+                                </property>
+                            </systemProperties>
+                            <argLine>-Xms2512m -Xmx2512m -XX:MaxPermSize=256m -XX:+PrintGCDetails -XX:+PrintGCDateStamps -verbose:gc -Xloggc:${project.build.directory}/gc.log</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>release-oss</id>
             <build>
                 <plugins>
@@ -208,7 +228,7 @@
     </distributionManagement>
 
     <properties>
-        <jdk.version>1.6</jdk.version>
+        <jdk.version>1.7</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <sonar-maven-plugin.version>2.2</sonar-maven-plugin.version>
